# InAppGpuProfiler

./: .gitignore  .gitmodules  CMakeLists.txt  CustomInAppGpuProfiler.h  GLProfiler.cpp  GLProfiler.h  InAppGpuProfiler.cpp  InAppGpuProfiler.h  InAppGpuProfilerConfig.h  README.md  fbo.hpp  glApi.hpp  iagp.cpp  iagp.h  main.cpp  shader.hpp  texture.hpp
.github/workflows/: Linux.yml  Osx.yml  Win.yml
glApi/: fbo.hpp  glApi.hpp  mesh.hpp  meshVfx.hpp  procMesh.hpp  program.hpp  programauto.hpp  quadMesh.hpp  quadVfx.hpp  quadVfxauto.hpp  shader.hpp  shaderauto.hpp  texture.hpp  uniforms.hpp
